// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NyanReporter getCatFace() returns a cross eyes face when failed 1`] = `"( [37mx .x[39m)"`;

exports[`NyanReporter getCatFace() returns a cross eyes face when routine is failed 1`] = `"( [37mx .x[39m)"`;

exports[`NyanReporter getCatFace() returns a happy eyes face when routine is passed 1`] = `"( [37m^ .^[39m)"`;

exports[`NyanReporter getCatFace() returns a normal face 1`] = `"( [37m- .-[39m)"`;

exports[`NyanReporter getCatFace() returns an open eyes face when routine is pending 1`] = `"( [37mo .o[39m)"`;

exports[`NyanReporter getCatFace() returns an open eyes face when routine is skipped 1`] = `"( [37mo .o[39m)"`;

exports[`NyanReporter increaseRainbowWidth() increases width each call 1`] = `
Array [
  Array [
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
  ],
]
`;

exports[`NyanReporter increaseRainbowWidth() increases width each call 2`] = `
Array [
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
]
`;

exports[`NyanReporter increaseRainbowWidth() increases width each call 3`] = `
Array [
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
  Array [
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
    "[38;5;154m-[0m",
  ],
]
`;

exports[`NyanReporter renderLines() doesnt render routine and task when final render 1`] = `
"
[38;5;154m-[0m [35m ,------,[39m
[38;5;154m-[0m [35m | . [39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m [90m^[39m[35m|__[39m[90m( [37mo .o[90m)[39m
[38;5;154m-[0m [90m  \\"\\"  \\"\\"[39m
"
`;

exports[`NyanReporter renderLines() renders base cat 1`] = `
"
[38;5;154m-[0m [35m ,------,[39m
[38;5;154m-[0m [35m | . [39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m [90m^[39m[35m|__[39m[90m( [37m- .-[90m)[39m
[38;5;154m-[0m [90m  \\"\\"  \\"\\"[39m


"
`;

exports[`NyanReporter renderLines() renders with a routine 1`] = `
"
[38;5;154m-[0m [35m ,------,[39m
[38;5;154m-[0m [35m | . [39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m [90m^[39m[35m|__[39m[90m( [37mo .o[90m)[39m
[38;5;154m-[0m [90m  \\"\\"  \\"\\"[39m

[90m[1mKEY[22m[39m Title
"
`;

exports[`NyanReporter renderLines() renders with a routine and task 1`] = `
"
[38;5;154m-[0m [35m ,------,[39m
[38;5;154m-[0m [35m | . [39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m [90m^[39m[35m|__[39m[90m( [37mo .o[90m)[39m
[38;5;154m-[0m [90m  \\"\\"  \\"\\"[39m

[90m[1mKEY[22m[39m Title [90mTitle[39m
"
`;

exports[`NyanReporter renderLines() renders with alternative ticks 1`] = `
"
[38;5;154m-[0m [35m ,------,[39m
[38;5;154m-[0m [35m | . [39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m [90m^[39m[35m|__[39m[90m( [37m- .-[90m)[39m
[38;5;154m-[0m [90m  \\"\\"  \\"\\"[39m


"
`;

exports[`NyanReporter renderLines() renders with alternative ticks 2`] = `
"
[38;5;154m-[0m[38;5;154m_[0m [35m ,------,[39m
[38;5;154m-[0m[38;5;154m_[0m [35m | .[39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m[38;5;154m_[0m [90m~[39m[35m|_[39m[90m( [37m- .-[90m)[39m
[38;5;154m-[0m[38;5;154m_[0m [90m \\"  \\"\\"  \\"[39m


"
`;

exports[`NyanReporter renderLines() renders with alternative ticks 3`] = `
"
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m [35m ,------,[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m [35m | .[39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m [90m~[39m[35m|_[39m[90m( [37m- .-[90m)[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m [90m \\"  \\"\\"  \\"[39m


"
`;

exports[`NyanReporter renderLines() renders with alternative ticks 4`] = `
"
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m [35m ,------,[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m [35m | . [39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m [90m^[39m[35m|__[39m[90m( [37m- .-[90m)[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m [90m  \\"\\"  \\"\\"[39m


"
`;

exports[`NyanReporter renderLines() renders with alternative ticks 5`] = `
"
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m[38;5;184m-[0m [35m ,------,[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m[38;5;184m-[0m [35m | . [39m[90m/\\\\_/\\\\[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m[38;5;184m-[0m [90m^[39m[35m|__[39m[90m( [37m- .-[90m)[39m
[38;5;154m-[0m[38;5;154m_[0m[38;5;154m_[0m[38;5;184m-[0m[38;5;184m-[0m [90m  \\"\\"  \\"\\"[39m


"
`;
